# neotolis-engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  _diff.txt  autoresearch-results.tsv  branch_diff.patch  branch_diff.txt  build_error.txt  diff_engine.txt  diff_tests.txt  index.html
engine/: CMakeLists.txt
engine/app/: CMakeLists.txt  nt_app.c  nt_app.h
engine/app/native/: nt_app_native.c
engine/app/stub/: nt_app_stub.c
engine/app/web/: nt_app_web.c
engine/atlas/: CMakeLists.txt  nt_atlas.c  nt_atlas.h
engine/basisu/: CMakeLists.txt  nt_basisu_transcoder.cpp  nt_basisu_transcoder.h
engine/comp_storage/: CMakeLists.txt  nt_comp_storage.c  nt_comp_storage.h
engine/core/: CMakeLists.txt  nt_align.h  nt_assert.c  nt_assert.h  nt_builtins.h  nt_clamp.h  nt_core.c  nt_core.h  nt_platform.h  nt_types.h  nt_utf8.h
engine/drawable_comp/: CMakeLists.txt  nt_drawable_comp.c  nt_drawable_comp.h
engine/entity/: CMakeLists.txt  nt_entity.c  nt_entity.h
engine/font/: CMakeLists.txt  nt_font.c  nt_font.h  nt_font_hot.h  nt_font_internal.h
engine/fs/: CMakeLists.txt  nt_fs.c  nt_fs.h  nt_fs_internal.h
engine/fs/native/: nt_fs_native.c
engine/fs/stub/: nt_fs_stub.c
engine/fs/web/: nt_fs_web.c
engine/graphics/: CMakeLists.txt  nt_gfx.c  nt_gfx.h  nt_gfx_internal.h
engine/graphics/gl/: nt_gfx_gl.c  nt_gfx_gl_ctx.h  nt_gfx_gl_ctx_native.c  nt_gfx_gl_ctx_web.c
engine/graphics/native/: nt_gfx_native.c
engine/graphics/stub/: nt_gfx_stub.c
engine/hash/: CMakeLists.txt  nt_hash.c  nt_hash.h
engine/http/: CMakeLists.txt  nt_http.c  nt_http.h  nt_http_internal.h
engine/http/native/: nt_http_native.c
engine/http/stub/: nt_http_stub.c
engine/http/web/: nt_http_web.c
engine/input/: CMakeLists.txt  nt_input.c  nt_input.h  nt_input_internal.h
engine/input/native/: nt_input_native.c
engine/input/stub/: nt_input_stub.c
engine/input/web/: nt_input_web.c
engine/log/: CMakeLists.txt  nt_log.h
engine/log/default/: nt_log.c
engine/log/stub/: nt_log_stub.c
engine/material/: CMakeLists.txt  nt_material.c  nt_material.h
engine/material_comp/: CMakeLists.txt  nt_material_comp.c  nt_material_comp.h
engine/math/: CMakeLists.txt  nt_math.h
engine/memory/: CMakeLists.txt  nt_mem_scratch.c  nt_mem_scratch.h
engine/mesh_comp/: CMakeLists.txt  nt_mesh_comp.c  nt_mesh_comp.h
engine/platform/web/: CMakeLists.txt  library.js  nt_platform_web.c  nt_platform_web.h  nt_web.h  pre.js  shell.html  shell.html.in  simd_loader.js
engine/pool/: CMakeLists.txt  nt_pool.c  nt_pool.h
engine/render/: CMakeLists.txt  nt_render_defs.h  nt_render_items.c  nt_render_items.h  nt_render_util.c  nt_render_util.h
engine/render_state_comp/: CMakeLists.txt  nt_render_state_comp.c  nt_render_state_comp.h
engine/renderers/: CMakeLists.txt  nt_mesh_renderer.c  nt_mesh_renderer.h  nt_shape_renderer.c  nt_shape_renderer.h  nt_sprite_renderer.c  nt_sprite_renderer.h  nt_text_renderer.c  nt_text_renderer.h
engine/resource/: CMakeLists.txt  nt_resource.c  nt_resource.h  nt_resource_internal.h
engine/shape/: CMakeLists.txt  nt_shape.c  nt_shape.h
engine/sort/: CMakeLists.txt  nt_sort.c  nt_sort.h
engine/sprite_comp/: CMakeLists.txt  nt_sprite_comp.c  nt_sprite_comp.h
engine/stats/: CMakeLists.txt  nt_stats.c  nt_stats.h
engine/time/: CMakeLists.txt  nt_time.c  nt_time.h
engine/transform_comp/: CMakeLists.txt  nt_transform_comp.c  nt_transform_comp.h
engine/ui/: CMakeLists.txt  nt_ui.c  nt_ui.h  nt_ui_anim.c  nt_ui_anim.h  nt_ui_button.c  nt_ui_button.h  nt_ui_debug.c  nt_ui_debug.h  nt_ui_fit.c  nt_ui_fit.h  nt_ui_image.c  nt_ui_image.h  nt_ui_inspector.c  nt_ui_inspector.h  nt_ui_internal.h  nt_ui_label.c  nt_ui_label.h  nt_ui_panel.c  nt_ui_panel.h  nt_ui_scale.c  nt_ui_scale.h
engine/utf8/: CMakeLists.txt  nt_utf8.c  nt_utf8.h
engine/window/: CMakeLists.txt  nt_window.c  nt_window.h  nt_window_native.h
examples/atlas/: CMakeLists.txt  build_packs.c  main.c
examples/bench_capsule/: CMakeLists.txt  main.c
examples/bench_shapes/: CMakeLists.txt  index.html  main.c
examples/builder_demo/: CMakeLists.txt  build_assets.c  main.c
examples/bunnymark/: CMakeLists.txt  README.md  build_packs.c  bunny_physics.h  main.c
examples/hello/: CMakeLists.txt  index.html  main.c
examples/slice9_demo/: CMakeLists.txt  build_packs.c  main.c
examples/spinning_cube/: CMakeLists.txt  index.html  main.c
examples/sponza/: CMakeLists.txt  build_packs.c  main.c  sponza_manifest.h
examples/text/: CMakeLists.txt  build_packs.c  main.c
examples/textured_quad/: CMakeLists.txt  build_packs.c  index.html  main.c
examples/ui_buttons_demo/: CMakeLists.txt  build_packs.c  main.c
examples/ui_theme_demo/: CMakeLists.txt  build_packs.c  main.c
shared/: CMakeLists.txt
shared/include/: nt_atlas_format.h  nt_blob_format.h  nt_crc32.c  nt_crc32.h  nt_font_format.h  nt_formats.h  nt_mesh_format.h  nt_pack_format.h  nt_shader_format.h  nt_texture_format.h
tests/: CMakeLists.txt  bench_parallel.c
tests/fixtures/: test_shader.frag  test_shader.vert
tests/submodule/: CMakeLists.txt  main.c
tests/unit/: test_app.c  test_atlas.c  test_builder.c  test_bunnymark_physics.c  test_components.c  test_core.c  test_entity.c  test_font.c  test_fs.c  test_gfx.c  test_hash.c  test_http.c  test_input.c  test_log_api.c  test_log_swap.c  test_material.c  test_mesh_renderer.c  test_nt_font_measure_bench.c  test_nt_gfx_scissor.c  test_nt_mem_scratch.c  test_nt_sprite_renderer_emit_region.c  test_nt_ui_anim.c  test_nt_ui_begin_end.c  test_nt_ui_button.c  test_nt_ui_clip_hittest.c  test_nt_ui_debug.c  test_nt_ui_element_data.c  test_nt_ui_fit.c  test_nt_ui_hittest.c  test_nt_ui_image.c  test_nt_ui_inspector.c  test_nt_ui_interaction.c  test_nt_ui_label.c  test_nt_ui_lifecycle.c  test_nt_ui_measure_cb.c  test_nt_ui_multictx.c  test_nt_ui_panel.c  test_nt_ui_pointer_state.c  test_nt_ui_scale.c  test_nt_ui_stats.c  (+22 more)
tests/wasm/: simd_loader_test.js  smoke_entry.c  smoke_test.js  sort_bench_entry.c  sort_bench_test.js
(+373 files in other folders)
