add_subdirectory(core)
add_subdirectory(log)
add_subdirectory(time)
add_subdirectory(app)
add_subdirectory(window)
add_subdirectory(input)
add_subdirectory(graphics)
add_subdirectory(math)
add_subdirectory(entity)
add_subdirectory(comp_storage)
add_subdirectory(transform_comp)
add_subdirectory(mesh_comp)
add_subdirectory(material_comp)
add_subdirectory(render_state_comp)
add_subdirectory(resource)
add_subdirectory(http)
add_subdirectory(fs)
add_subdirectory(renderers)

if(EMSCRIPTEN)
    add_subdirectory(platform/web)
endif()
